# dukeHumanoidHardwareControl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  biped_controller.py  joint_monkey.py  motor_controller.py  mscl.py  numpy_ringbuffer.py  publisher.py  pybind_test.py  run_joint_monkey.sh  sensor_controller.py  sshkeyboard_pd_test.py  test.py  test_interpolate.py  trajectory_PD_test.py
checkpoint/baseline/: config.yaml  policy.onnx
checkpoint/passive/: config.yaml  policy.onnx
src/: Readme.md  ethercat_motor.cpp  ethercat_motor.h  ethercat_motor_py.cpp  filter_test.cpp  nanobind_test.cpp  network.cpp  network.h  pybind_test.cpp  simple_test.c  simple_test.cpp
src/msgpack_test/: msgpack_test.cpp  person.h  receiver.cpp  sender.cpp
teensy_comm/: teensy_comm.ino
